--- a/.cwmrc
+++ b/.cwmrc
@@ -36,8 +36,8 @@ bind-key 4-g window-group
 bind-key 4-Right group-cycle
 bind-key 4-Left group-rcycle
 
-bind-key M-s  "bin/screenshot"
-bind-key MS-s  "bin/screenshot 200"
+bind-key 4-s  "bin/screenshot"
+bind-key 4S-s  "bin/screenshot 200"
 
 bind-key 4-f window-fullscreen
 bind-key 4-m window-maximize
