update to solarized dark

--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -14,9 +14,9 @@
 
 # Window Decoration
 border_width		= 2
-color_focus		= rgb:d0/87/70
+color_focus		= rgb:5b/77/10
 # color_focus_maximized	= yellow
-# color_unfocus		= rgb:88/88/88
+color_unfocus		= rgb:68/7e/83
 # color_unfocus_maximized	= rgb:88/88/00
 region_padding	= 20
 tile_gap		= 10
@@ -33,18 +33,18 @@ tile_gap		= 10
 # bar_enabled		= 1
 # bar_enabled_ws[1]	= 1
 bar_border_width	= 6
-bar_border[1]		= white
+bar_border[1]		= rgb:00/2a/36
 # bar_border_unfocus[1]	= rgb:00/40/40
-bar_color[1]		= white
-# bar_color_selected[1]	= rgb:00/80/80
-bar_font_color[1]	= black
+bar_color[1]		= rgb:00/2a/36
+bar_color_selected[1]	= white
+bar_font_color[1]	= rgb:1b/79/77
 # bar_font_color_selected	= black
 bar_font		= Input Mono:pixelsize=12:antialias=true:style=Bold
 # bar_font_pua		= Typicons:pixelsize=14:antialias=true
-# bar_action		= baraction.sh
+bar_action		= ~/bin/baraction.sh
 # bar_action_expand	= 0
 bar_justify		= center
-bar_format		= %d %b %R %Y
+bar_format		= +A+2<%d %b %R %Y
 # workspace_indicator	= listcurrent,listactive,markcurrent,printnames
 # bar_at_bottom		= 1
 # stack_enabled		= 1
@@ -94,7 +94,7 @@ modkey = Mod4
 
 # Validated default programs:
 # program[lock]		= xlock
-program[term]		= alacritty
+program[term]		= xterm
 # program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
@@ -106,7 +106,7 @@ program[term]		= alacritty
 
 # Optional default programs that will only be validated if you override:
 # program[screenshot_all]	= screenshot.sh full	# optional
-program[screenshot_wind]	= ~/bin/screenshot
+# program[screenshot_wind]	= ~/bin/screenshot
 # program[initscr]	= initscreen.sh			# optional
 
 # EXAMPLE: Define 'firefox' action and bind to key.
