--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,20 @@ set -g base-index 1
 set -g mouse on
 set -g renumber-windows on
 set -g status-interval 1
-set -g status-right-length 100
+#set -g status-right '#{?client_prefix,#[fg=green#,bg=black] PREFIX,#(bin/status)}'
+#set -g status-right-length 100
 set -s escape-time 0
 setw -g mode-keys vi
+
+set -g status-position top
+
+# colors hurt my eyes
+# set -g status-style reverse,bright
+#set -g message-style reverse
+set -g set-titles on
+set-option -g set-titles-string "#W"
+set -g status-left ""
+set -g status-right "#T "
 
 bind -r H resize-pane -L 2
 bind -r J resize-pane -D 2
@@ -29,32 +40,3 @@ bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel \
 bind -n MouseDown2Pane run \
   'tmux set-buffer "$(xclip -o -selection clipboard)";tmux paste-buffer'
 
-#### COLOUR (Solarized dark)
-
-# default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
-
-# default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window-option -g window-status-style dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
-
-# pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
-
-# message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
