--- a/.cwmrc
+++ b/.cwmrc
@@ -1,9 +1,13 @@
-sticky yes
-fontname "Input Mono:size=8:style=Bold"
+fontname "Input Mono:pixelsize=16"
+
 unbind-key all
 
-bind-key 4-Return terminal
-bind-key CM-l lock
+
+# mod + enter = new xterm
+bind-key 4-Return xterm
+# ctrl + alt + L = lock screen (xlock)
+bind-key CM-l xlock
+# mod + backspace = hide window
 bind-key 4-BackSpace window-hide
 
 # mod + down arrow = lower window's focus
@@ -18,35 +22,45 @@ bind-key 4-w window-delete
 # set a window's label
 bind-key 4-n window-menu-label
 
+# mod + $N = show only windows for group $N
+# (you can think of this as switching to virtual desktop $N)
 bind-key 4-1 group-only-1
 bind-key 4-2 group-only-2
 bind-key 4-3 group-only-3
 bind-key 4-4 group-only-4
 bind-key 4-5 group-only-5
 
+# mod + shift +$N = move window to group $N
 bind-key 4S-1 window-movetogroup-1
 bind-key 4S-2 window-movetogroup-2
 bind-key 4S-3 window-movetogroup-3
 bind-key 4S-4 window-movetogroup-4
 bind-key 4S-5 window-movetogroup-5
 
+# mod + A = toggle showing windows from all groups
 bind-key 4-a group-toggle-all
+# mod + G = toggle current window's group membership
 bind-key 4-g window-group
 
+# mod + right arrow = cycle through the window groups
+# (you can think of this as switching to the next virtual desktop)
 bind-key 4-Right group-cycle
+# mod + left arrow = same thing in reverse
 bind-key 4-Left group-rcycle
+# mod + S = stick current window to be visible in all groups
+bind-key 4-s window-stick
 
-bind-key 4-s  "bin/screenshot"
-bind-key 4S-s  "bin/screenshot 200"
-
+# mod + F = make current window fullscreen
 bind-key 4-f window-fullscreen
+# mod + M = maximize current window
 bind-key 4-m window-maximize
-bind-key 4-equal window-vmaximize
-bind-key 4S-equal window-hmaximize
+# mod + equals = maximize window in vertical direction only
+bind-key 4-v window-vmaximize
+# mod + shift + equals = maximize window in horizontal direction only
+bind-key 4S-v window-hmaximize
 
+# mod + H,J,K,L = move window left, down, up, right 10 pixels
 bind-key 4-h window-move-left-big
-#bind-key 4-j window-move-down-big
-#bind-key 4-k window-move-up-big
 bind-key 4-l window-move-right-big
 
 # mod + shift + H,J,K,L = resize window left, down, up, right by 10 pixels
@@ -55,7 +69,9 @@ bind-key 4S-j window-resize-down-big
 bind-key 4S-k window-resize-up-big
 bind-key 4S-l window-resize-right-big
 
+# mod + V = tile windows vertically, current window to the left
 bind-key 4-v window-vtile
+# mod + V = tile windows horizontally, current window to the top
 bind-key 4-c window-htile
 
 # mod + / = show popup menu of current windows
@@ -69,8 +85,9 @@ bind-key 4-period menu-ssh
 
 # mod + shift + R = restart cwm, reloading configuration
 bind-key 4-q restart
-# mod + shift + E = log out
 bind-key 4S-q quit
+bind-key 4-b            "xbacklight -dec 10 -time 0"
+bind-key 4S-b           "xbacklight -inc 10 -time 0"
 
 # unbind default mouse actions
 unbind-mouse M-1
@@ -89,6 +106,19 @@ bind-mouse 4-2 window-lower
 bind-mouse 4S-2 window-hide
 
 # these commands will appear in the command menu
-command xterm  xterm
+command term  alacritty
 command firefox firefox
 command xcalc  xcalc
+command gimp gimp
+
+borderwidth 3
+snapdist 5
+moveamount 3
+sticky yes
+color activeborder   red
+color inactiveborder darkgrey
+color menufg         '#000000'
+color menubg         '#d9d9d9'
+color font           '#000000'
+#gap 40 10 10 10
+ignore lemonbar
